# mansionstruck

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: input.ron  main.cob
assets/entities/: mario.ron  player.ron
assets/entities/char/: entity.ron
assets/entities/mario/: collider.ron  entity.ron
assets/images/: Sprite-0001.aseprite  Sprite-0002.aseprite
assets/ldtk/: maro.ldtk  mayrio.ldtk
assets/ui/: main.cob
game/assets/entities/mario/: test.ron
src/: audio.rs  camera.rs  dev_tools.rs  input.rs  main.rs  mario.rs  physics.rs  time.rs  ui.rs  walls.rs
src/char_controller/: mod.rs  move_and_slide.rs
src/screens/: mod.rs
tmp/: Dockerfile
